# block-sparse-attn-ck

./: .gitignore  environment.yaml
torch_ext/: CMakeLists.txt  setup.py
torch_ext/bsp_attn/: __init__.py  bsp_attn.cpp  double_array.cpp  fmha_fwd_epilogue.hpp  fmha_fwd_tile_partitioner.hpp  sddmm_tile_mask.hpp  tilesparse_fmha_fwd_kernel.hpp
torch_ext/cmake/: FetchComposableKernel.cmake  LoadHIP.cmake
torch_ext/test/: bsp_attn_test.py  double_array_test.py
